--- a/Ultraviolet-Static/public/404.html
+++ b/Ultraviolet-Static/public/404.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>404 | Selenite x Ultraviolet</title>
+    <title>404 | Experimental Seraph</title>
     <meta
       name="theme-color"
       media="(prefers-color-scheme: dark)"
@@ -56,52 +56,28 @@
     </script>
   </head>
 
-  <body class="noscroll">
-    <header class="noscroll">
-      <a href="index.html">Home</a>
-      <a href="settings.html">Settings</a>
-      <a href="https://discord.gg/7jyufnwJNf">Selenite Discord</a>
-      <a id="openBlankLink">Open Blank</a>
-    </header>
-    <main id="main" class="noscroll">
-      <div class="logo-wrapper left-margin">
-        <h1>ultraviolet error</h1>
-      </div>
-      <div class="desc left-margin">
-        <p>the server could not route your request :/</p>
-        <p>(sometimes waiting a couple of seconds or refreshing the page helps fix this issue!)</p>
-        <p id="uv-error"></p>
-        <code id="uv-error-code"></code>
-        <button id="uv-register-sw" value="Register service worker">
-          register serviceworker
-        </button>
-      </div>
-    </main>
-    <footer class="noscroll">
-      <div>
-        <a
-          title="The TitaniumNetwork GitHub organization"
-          href="https://github.com/titaniumnetwork-dev"
-          >TitaniumNetwork</a
-        >
-        <a title="The TitaniumNetwork Discord" href="https://discord.gg/unblock"
-          >Discord</a
-        >
-        <a
-          title="The TompHTTP GitHub organization"
-          href="https://github.com/tomphttp"
-          >TompHTTP</a
-        >
-        <a
-          title="The official deployment repository for Ultraviolet"
-          href="https://github.com/titaniumnetwork-dev/Ultraviolet-App"
-          >GitHub</a
-        >
-        <a title="License information" href="credits.html">Credits</a>
-      </div>
-      <div>
-        <span>Ultraviolet &copy; TN 2024</span>
-      </div>
-    </footer>
+  <body>
+    <div class="content-side">
+          <h1 class="typewriter">404</h1>
+          <br>
+
+          <p id="uv-error"></p>
+          <code id="uv-error-code"></code>
+          <button id="uv-register-sw" value="Register service worker">
+            register serviceworker
+          </button>
+          <p>(sometimes waiting a couple of seconds or refreshing the page helps fix this issue!)</p>
+
+          <br>
+          <p class="linkp"><a id="openBlankLink">open blank</a></p>
+          <p class="linkp"><a href="https://discord.gg/ZyZDmx3zuQ" target="_blank">discord server</a> • <a href="https://github.com/a456pur/seraph" target="_blank">github</a></p>
+          
+          <br>
+          <a href="https://github.com/a456pur" target="_blank" style="text-decoration: none;">˗ˏˋ❀ website created & developed by @a456pur ❀ ´ˎ˗</a>
+          <a target="_blank" style="text-decoration: none;">˗ˏˋ powered by ultraviolet ´ˎ˗</a>
+
+              
+        </div>
   </body>
+
 </html>
