--- a/Ultraviolet-Static/public/index.html
+++ b/Ultraviolet-Static/public/index.html
@@ -6,11 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Selenite x Ultraviolet</title>
-    <meta
-      name="description"
-      content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
-    />
+    <title>Experimental | Seraph</title>
+    <link href="https://raw.githubusercontent.com/ijnfem/seraph/main/images/ico.ico" rel="shortcut icon"> 
     <meta
       name="theme-color"
       media="(prefers-color-scheme: dark)"
@@ -26,93 +23,42 @@
     <script src="index.js" defer></script>
     <script src="themes.js" defer></script>
     <script src="blank.js" defer></script>
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "FAQPage",
-        "mainEntity": [
-          {
-            "@type": "Question",
-            "name": "What is Ultraviolet (Web Proxy)?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers and more!"
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "How do I unblock sites using Ultraviolet?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Simply head to an official site featuring Ultraviolet such as Holy Unblocker or Incognito! You can also self-host Ultraviolet on your own web server for maximum privacy."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "What if Ultraviolet is blocked or not working?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Join the Titanium Network Discord at discord.gg/unblock!"
-            }
-          }
-        ]
-      }
-    </script>
   </head>
 
-  <body class="noscroll">
-    <header class="noscroll">
-      <a href="index.html">Home</a>
-      <a href="settings.html">Settings</a>
-      <a href="https://discord.gg/7jyufnwJNf">Selenite Discord</a>
-      <a id="openBlankLink">Open Blank</a>
-    </header>
-    <main id="main" class="noscroll">
-      <h1>selenite</h1>
-      <p>welcome to selenite.. if it was a proxy and powered by ultraviolet</p>
+  <body>
+    <div class="content-side">
+          <h1 class="typewriter">seraph</h1>
+          <h2>experimental build</h2>
+          <br>
 
-      <form id="uv-form" class="flex-center">
-        <input
-          id="uv-search-engine"
-          value="https://www.google.com/search?q=%s"
-          type="hidden"
-        />
-        <input
-          id="uv-address"
-          type="text"
-          placeholder="search the web or visit your favorite websites"
-        />
-      </form>
-      <div class="desc left-margin">
-        <p id="uv-error"></p>
-        <pre id="uv-error-code"></pre>
-      </div>
-    </main>
-    <footer class="noscroll">
-      <div>
-        <a
-          title="The TitaniumNetwork GitHub organization"
-          href="https://github.com/titaniumnetwork-dev"
-          >TitaniumNetwork</a
-        >
-        <a title="The TitaniumNetwork Discord" href="https://discord.gg/unblock"
-          >Discord</a
-        >
-        <a
-          title="The TompHTTP GitHub organization"
-          href="https://github.com/tomphttp"
-          >TompHTTP</a
-        >
-        <a
-          title="The official deployment repository for Ultraviolet"
-          href="https://github.com/titaniumnetwork-dev/Ultraviolet-App"
-          >GitHub</a
-        >
-        <a title="License information" href="credits.html">Credits</a>
-      </div>
-      <div>
-        <span>Ultraviolet &copy; TN 2024</span>
-      </div>
-    </footer>
+
+          <form id="uv-form" class="flex-center">
+            <input
+              id="uv-search-engine"
+              value="https://www.google.com/search?q=%s"
+              type="hidden"
+            />
+            <input
+              id="uv-address"
+              type="text"
+              placeholder="browse the web"
+            />
+          </form>
+
+          <div class="desc left-margin">
+            <p id="uv-error"></p>
+            <pre id="uv-error-code"></pre>
+          </div>
+
+          <br>
+          <p class="linkp"><a id="openBlankLink">open blank</a></p>
+          <p class="linkp"><a href="https://discord.gg/ZyZDmx3zuQ" target="_blank">discord server</a> • <a href="https://github.com/a456pur/seraph" target="_blank">github</a></p>
+          
+          <br>
+          <a href="https://github.com/a456pur" target="_blank" style="text-decoration: none;">˗ˏˋ❀ website created & developed by @a456pur ❀ ´ˎ˗</a>
+          <a target="_blank" style="text-decoration: none;">˗ˏˋ powered by ultraviolet ´ˎ˗</a>
+
+              
+        </div>
   </body>
 </html>
